--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "next": "13.x",
     "react": "18.x",
     "react-dom": "18.x"
   },
   "devDependencies": {
-    "typescript": "^5.x",
-    "@types/react": "^18.x",
     "@types/node": "^20.x",
-    "tailwindcss": "^3.x",
+    "@types/react": "^18.x",
     "autoprefixer": "^10.x",
-    "postcss": "^8.x"
+    "postcss": "^8.x",
+    "tailwindcss": "^3.x",
+    "typescript": "^5.x"
   }
 }
